--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@react-navigation/native-stack": "^6.9.7",
     "axios": "^1.7.7",
     "expo": "~52.0.10",
+    "expo-constants": "^17.0.3",
+    "expo-device": "^7.0.1",
     "expo-font": "^13.0.1",
     "expo-location": "~18.0.2",
+    "expo-notifications": "^0.29.8",
     "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.9",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-safe-area-context": "4.12.0",
